@@ -10,7 +10,7 @@ GeomErrorbar <- proto(GeomInterval, {
   }
   
   default_stat <- function(.) StatIdentity
-  default_aes <- function(.) aes(colour = "black", size=1, linetype=1, width=0.9)
+  default_aes <- function(.) aes(colour = "black", size=0.5, linetype=1, width=0.9)
 
   seealso <- list(
     "geom_pointrange" = "range indicated by straight line, with point in the middle",
